# robot-interface

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tasks.py
docs/: installation.md
docs/examples/getting_started/: 000_connect_rtde_arm.py  001_connect_urscript_arm.py  002_connect_ur_gripper.py  003_arm_movement.py  003_move.py  004_pick_and_place.py  005_move_block_around.py  006_gripper_socket.py  006_move_block_around_cartesian.py  007_camera_usage.py  100_live.py
src/robot_interface/: __init__.py  robot.py
src/robot_interface/backends/: __init__.py
src/robot_interface/backends/mock/: __init__.py  arm.py  camera.py  gripper.py
src/robot_interface/backends/ur10/: __init__.py  arm.py  connection.py  gripper.py  kinematics.py
src/robot_interface/interface/: __init__.py  arm.py  camera.py  capabilities.py  gripper.py
tests/contracts/: test_robot_core_additional.py
tests/examples/: test_boundary_no_backend_imports.py  test_docs_api.py  test_examples_layout.py  test_getting_started_examples.py  test_readme_usage.py
